--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,11 +2,10 @@
 {% load static %}
 <!DOCTYPE html>
 
-
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 <body>
     <div id="content">
